--- a/_site.yml
+++ b/_site.yml
@@ -5,5 +5,7 @@ navbar:
   left:
     - text: "Home"
       href: index.html
+    - text: "Projects"
+      href: projects.html
     - text: "About Me"
       href: about.html
